# blockgame

./: .gitignore  Cargo.toml  build.rs  devlog.md  ideas.md  web.sh
assets/: index.html
common/: Cargo.toml
common/src/: atlas.rs  blocks.rs  lib.rs  pos.rs
logic/: blocks.lua  entities.lua  world.lua
lua2js/: Cargo.toml  README.md
lua2js/src/: ast.rs  lib.rs  parse.rs  print_luau.rs  runtime.js  strip_types.rs  translate.rs
lua2js/tests/: ffi.lua  flow.lua  functions.lua  require.lua  simple.lua  tables.lua  type_checking.lua  types.lua
lua2js/tests/ffi_test/: Cargo.toml  wasm_setup.js
lua2js/tests/ffi_test/src/: lib.rs  main.rs
src/: camera.rs  chunk_mesh.rs  entity_render.rs  gen.rs  lib.rs  lua_api.rs  main.rs  pos.rs  shader.wgsl  textures.rs  window.rs  world.rs  worldgen.rs
