[package]
name = "blockgame"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "common"
]

[dependencies]
winit="0.28.7"  # make a window
wgpu="0.17.1"  # cross platform gpu stuff
pollster="0.3.0"  # wgpu init functions are async but I don't need a whole runtime
env_logger="0.10.0"  # access logs from wgpu
common = { path="./common" }
glam = { workspace=true }
image = { workspace=true }

[workspace.dependencies]
glam="0.24.2"  # low-d linear algebra
image = "0.24.7" # load png files

[build-dependencies]
common = { path="./common" }

[profile.dev.package."*"]
opt-level = 2
codegen-units = 1

[profile.release]
strip = "debuginfo"
#panic = "abort"
#lto = true

[profile.release.package."*"]
codegen-units = 1

