[package]
name = "blockgame"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
    "common",
    "lua2js",
    "lua2js/tests/ffi_test"
]

[features]
default = ["profiling"]
profiling = []

[dependencies]
winit="0.28.7"  # make a window
wgpu= { version = "0.18.0" }  # cross platform gpu stuff  # can make it run in safari with , features = ["webgl"] but makes the wasm bigger
pollster="0.3.0"  # wgpu init functions are async but I don't need a whole runtime
env_logger="0.10.0"  # access logs from wgpu
common = { path="./common" }
glam = { workspace=true }
image = { workspace=true }
instant = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mlua = { workspace=true }

[workspace.dependencies]
glam="0.24.2"  # low-d linear algebra
image = "0.24.7" # load png files
mlua = { version = "0.9.1", features = ["luajit52", "vendored"] }  # luajit bindings
wee_alloc = "0.4.5"  # wasm memory allocator

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version="0.3.64", features=["Window", "HtmlElement"]}
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
log = "0.4"
wee_alloc = { workspace = true }

[build-dependencies]
common = { path="./common" }
lua2js = { path="./lua2js" }

[profile.dev.package."*"]
opt-level = 2
codegen-units = 1

[profile.release]
strip = "debuginfo"
panic = "abort"
lto = true

[profile.release.package."*"]
codegen-units = 1
